                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 3.5.0


  *) [TS-2128] Don't link libGeoIP.so.1 into binaries

  *) [TS-2122] Enlarge the 64KB limitation of log buffer size.

  *) [TS-2061] LogFile::write_ascii_logbuffer3() can silently drop log
   entries.

  *) [TS-2123] Remove useless max_entries_per_buffer option.

  *) [TS-2112] make libloader build by default.

  *) [TS-2111] configure check in boost falsely requires 1.50. Reducing it to
   v1.33, which is what RHEL5 ships with.

  *) [TS-1823] remap.config line continuation support.
    Author: Jim Riggs <jim@riggs.me>

  *) [TS-1597] Document remap.config filters. Author: Jim Riggs <jim@riggs.me>.

  *) [TS-2111] configure check in boost falsely requires 1.50. Reducing it to
   v1.33, which is what RHEL5 ships with.


Changes with Apache Traffic Server 3.3.5


  *) [TS-2051] Fix SSL crash due to excess READ_COMPLETE events.

  *) [TS-2099] Using wrong member when setting active timeout.

  *) [TS-2102] SPDY plugin tries to setup protocol handler too early.

  *) [TS-1953] remove version checks from plugins that don't use it and
   add an example showing off the version API and partial compilation.

  *) [TS-2100] Initialize the SSL/NPN registration mutex.

  * [TS-1987, TS-2097]: Remove duplicate and unused string functions

  *) [TS-2091] Return an error from RecGetRecordOrderAndId if the stat isn't
   registered.

  *) [TS-2081] Make the WCCP addr configuration LOCAL.

  *) [TS-2093] Check bounds on plugin stat creation.

  *) [TS-2092] Use of uninitialized member in HdrHeap.

  *) [TS-2052] ET_SSL thread spinning
   Author: Can Selcik <cselcik at linkedin.com>

  *) [TS-2090 Make proxy.config.allocator.enable_reclaim default based on
   build instructions.

  *) [TS-2086] Remove a few more unused configs.

  *) [TS-1685] Remove TS_MICRO and fellas.

  *) [TS-1255] Add more overridable configurations, and fix bugs in how we