@@ -16,7 +16,11 @@
 #  See the License for the specific language governing permissions and
 #  limitations under the License.
 
-SUBDIRS = ts records perl
+SUBDIRS = ts records
+
+if BUILD_PERL_LIB
+SUBDIRS += perl
+endif
 
 # TsConfig is only built for WCCP until the bugs are worked out.
 if BUILD_WCCP
